--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="js/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <title>Login</title>
 </head>
 <body class='modeAtual'>
 
@@ -48,12 +48,13 @@
         <input type="password" id="senhaInput" name="senhaInput" class="form-control" placeholder="Digite sua senha">
       </div>
       <div class="forgotPassword text-end">
-        <a href="">Esqueceu sua senha?</a>
+        <a>Esqueceu sua senha?</a>
       </div>
-     
+      
       <button type="submit" class="btn btn-primary button">Entrar</button>
     </form>
 
+    
     <div class="criarConta">
       <p>Não tem uma conta?</p>
       <a href="/registerUser">Criar Conta</a>
