--- a/src/views/minhaConta.ejs
+++ b/src/views/minhaConta.ejs
@@ -17,7 +17,7 @@
         <div class="navegacao">
             <div class="collapse" id="navbarToggleExternalContent">
                 <div class="bg-dark p-4 navegar">
-                    <a href="/homePageAdmin/" class="text-white h4 ancora">Voltar ao menu</a>
+                    <a href="" id="voltar" class="text-white h4 ancora">Voltar ao menu</a>
                   <span class="text-muted">Toggleable via the navbar brand.</span>
                 </div>
               </div>
@@ -78,6 +78,18 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    
+    <script>
+    const voltar = document.querySelector("#voltar");
+    const allow = <%=currentUser.IsAdmin%>;
+
+    if (allow == 1) {
+        voltar.href = "/homePageAdmin/<%=currentUser.IDUser%>";
+    } else {
+        voltar.href = "/homePageUser/<%=currentUser.IDUser%>";
+    }
+
+    </script>
 
 </body>
 </html>
