--- a/src/views/allCars.ejs
+++ b/src/views/allCars.ejs
@@ -5,12 +5,14 @@
     <link rel="stylesheet" href="/css/adminCars.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="/css/setMode.css">
+    <script src="/js/setMode.js"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <title>Carros</title>
 </head>
-<body>
+<body class='modeAtual'>
 
     <header>
 
@@ -21,6 +23,7 @@
                     <form action="/homePageAdmin/<%=id%>">
                         <button id="carros" ><a class="text-white h4 carros" >Voltar ao menu</a></button>
                     </form>
+                    <a href="/" class="text-white h4 ancora" style="margin-top: 5px;" >Logout</a>
                   <span class="text-muted">Toggleable via the navbar brand.</span>
                 </div>
               </div>
