--- a/src/views/minhaConta.ejs
+++ b/src/views/minhaConta.ejs
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/informacoesUser.css">
+    <link rel="stylesheet" href="/css/setMode.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <script src="/js/setMode.js"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <title>Minha conta</title>
 </head>
-<body>
+<body class='modeAtual'>
 
     <header>
 
@@ -18,6 +20,7 @@
             <div class="collapse" id="navbarToggleExternalContent">
                 <div class="bg-dark p-4 navegar">
                     <a href="" id="voltar" class="text-white h4 ancora">Voltar ao menu</a>
+                    <a href="/" class="text-white h4 ancora" style="margin-top: 5px;" >Logout</a>
                   <span class="text-muted">Toggleable via the navbar brand.</span>
                 </div>
               </div>
@@ -40,7 +43,7 @@
 
                 <div class="col-md-6">
                   <label for="inputPassword4" class="form-label">Nome</label>
-                  <input type="text" class="form-control" id="userName" value="<%=currentUser.Name%>">
+                  <input type="text" class="form-control" id="userName" name="userName" value="<%=currentUser.Name%>">
                 </div>
                 <div class="col-md-6">
                   <label for="inputPassword4" class="form-label">CPF</label>
@@ -48,12 +51,12 @@
                 </div>
                 <div class="col-12">
                   <label for="inputAddress" class="form-label">Email</label>
-                  <input type="text" class="form-control" id="userEmail" value="<%=currentUser.Email %>">
+                  <input type="text" class="form-control" id="userEmail" name="userEmail" value="<%=currentUser.Email %>">
                 </div>
 
                 <div class="col-12">
                   <label for="inputAddress" class="form-label">Senha</label>
-                  <input type="text" class="form-control" id="userPassword" value="<%=currentUser.Password%>">
+                  <input type="text" class="form-control" id="userPassword" name="userPassword" value="<%=currentUser.Password%>">
                 </div>
 
                 <div class="col-12">
