--- a/src/views/registerUser.ejs
+++ b/src/views/registerUser.ejs
@@ -32,6 +32,11 @@
         </div>
 
         <div class="mb-3">
+          <label for="userTel" class="form-label">Telefone</label>
+          <input type="text" inputmode="numeric" id="userTel" class="form-control" name="telefone" placeholder="Digite seu Telefone" required>
+        </div>
+
+        <div class="mb-3">
           <label for="userEmail" class="form-label">E-mail</label>
           <input type="email" id="userEmail" class="form-control" name="email" placeholder="Digite seu e-mail" required>
         </div>
